fixing some bugs

--- a/app/src/main/res/layout/activity_continuous_capture.xml
+++ b/app/src/main/res/layout/activity_continuous_capture.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ContinuousCaptureActivity" >
+    tools:context=".ui.ContinuousCaptureActivity" >
 
     <Button
         android:id="@+id/capture_button"
