--- a/app/src/main/res/layout/activity_hardware_scaler.xml
+++ b/app/src/main/res/layout/activity_hardware_scaler.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HardwareScalerActivity" >
+    tools:context=".ui.HardwareScalerActivity" >
 
     <SurfaceView
         android:id="@+id/hardwareScaler_surfaceView"
