--- a/app/src/main/res/layout/activity_camera_capture.xml
+++ b/app/src/main/res/layout/activity_camera_capture.xml
@@ -22,7 +22,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".CameraCaptureActivity" >
+    tools:context=".ui.CameraCaptureActivity" >
 
     <com.android.videohacks.AspectFrameLayout
         android:id="@+id/cameraPreview_afl"
