--- a/app/src/main/res/layout/activity_chor_test.xml
+++ b/app/src/main/res/layout/activity_chor_test.xml
@@ -22,7 +22,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ChorTestActivity" >
+    tools:context=".ui.ChorTestActivity" >
 
     <TextView
         android:layout_width="wrap_content"
