--- a/app/src/main/res/layout/activity_codec_open.xml
+++ b/app/src/main/res/layout/activity_codec_open.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".CodecOpenActivity" >
+    tools:context=".ui.CodecOpenActivity" >
 
     <TextView
         android:id="@+id/codecOpenMessage_text"
