--- a/app/src/main/res/layout/activity_gles_info.xml
+++ b/app/src/main/res/layout/activity_gles_info.xml
@@ -22,7 +22,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".GlesInfoActivity" >
+    tools:context=".ui.GlesInfoActivity" >
 
     <Button
         android:id="@+id/glesInfoSave_button"
