--- a/app/src/main/res/layout/activity_play_movie_surface.xml
+++ b/app/src/main/res/layout/activity_play_movie_surface.xml
@@ -22,7 +22,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PlayMovieSurfaceActivity" >
+    tools:context=".ui.PlayMovieSurfaceActivity" >
 
     <Button
         android:id="@+id/play_stop_button"
