--- a/app/src/main/res/layout/activity_read_pixels.xml
+++ b/app/src/main/res/layout/activity_read_pixels.xml
@@ -22,7 +22,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ReadPixelsActivity" >
+    tools:context=".ui.ReadPixelsActivity" >
     
     <Button
         android:id="@+id/gfxRunTest_button"
