--- a/app/src/main/res/layout/activity_scheduled_swap.xml
+++ b/app/src/main/res/layout/activity_scheduled_swap.xml
@@ -22,7 +22,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ScheduledSwapActivity" >
+    tools:context=".ui.ScheduledSwapActivity" >
 
     <SurfaceView
         android:id="@+id/scheduledSwap_surfaceView"
